--- a/Assets/Stylesheets/commonStyles.css
+++ b/Assets/Stylesheets/commonStyles.css
@@ -13,7 +13,6 @@
 .div-borders {
     padding: 12px;
     border: 2px solid grey;
-    box-shadow: 3px 3px 3px grey;
     margin: 15px;
 }
 
@@ -32,8 +31,20 @@ h4{
 }
 
 pre{
-    border:3px solid green;
-    box-shadow: 5px 5px 3px greenyellow;
+    border:1px;
+    padding: 10px;
+    margin: 100px auto;
+    background: white;
+    border-radius: 5px;
+    box-shadow:
+    0 2.8px 2.2px rgba(0, 0, 0, 0.034),
+    0 6.7px 5.3px rgba(0, 0, 0, 0.048),
+    0 12.5px 10px rgba(0, 0, 0, 0.06),
+    0 22.3px 17.9px rgba(0, 0, 0, 0.072),
+    0 41.8px 33.4px rgba(0, 0, 0, 0.086),
+    0 100px 80px rgba(0, 0, 0, 0.12)
+  ;
+  
 }
 code{
     font-family: Arial, Helvetica, sans-serif !important;
